--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,13 @@
 {
   "env": {
+    "commonjs": true,
     "es2021": true,
     "node": true,
     "jest": true
   },
-  "extends": ["airbnb-base", "plugin:jest/recommended", "prettier"],
+  "extends": ["eslint:recommended", "plugin:jest/recommended", "prettier"],
   "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module"
+    "ecmaVersion": 12
   },
   "rules": {}
 }
